force-app/main/default/objects/Detalle_caso__c/Detalle_caso__c.object-meta.xml
<CustomObject>
    <label>Detalle caso</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles caso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>