force-app/main/default/objects/Detalle_caso__c/fields/Accion__c.field-meta.xml
<CustomField>
    <fullName>Accion__c</fullName>
    <description>Acción subproducto</description>
    <inlineHelpText>Acción subproducto</inlineHelpText>
    <label>Acción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
                <label>Cambio Cuenta colectiva</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <default>true</default>
                <label>Cambio Subproducto</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Quitar Cuenta colectiva</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>