force-app/main/default/objects/Detalle_caso__c/fields/Ano_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Ano_tarjeta__c</fullName>
    <label>Año</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
                <isActive>false</isActive>
                <label>2017</label>
            </value>
            <value>
                <fullName>2018</fullName>
                <isActive>false</isActive>
                <label>2018</label>
            </value>
            <value>
                <fullName>2026</fullName>
                <isActive>false</isActive>
                <label>2026</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>