force-app/main/default/objects/Detalle_caso__c/fields/Aplica_Cambio_Sub_Producto_desde_Retiros__c.field-meta.xml
<CustomField>
    <fullName>Aplica_Cambio_Sub_Producto_desde_Retiros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica Cambio Sub Producto desde Retiros</label>
    <type>Checkbox</type>
</CustomField>