force-app/main/default/objects/Detalle_caso__c/fields/Aprobacion_exoneracion__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_exoneracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación de exoneración</label>
    <type>Checkbox</type>
</CustomField>