force-app/main/default/objects/Detalle_caso__c/fields/Aprobacion_limite__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_limite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación por límite</label>
    <type>Checkbox</type>
</CustomField>