force-app/main/default/objects/Detalle_caso__c/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario</label>
    <referenceTo>Beneficiario__c</referenceTo>
    <relationshipLabel>Detalles caso</relationshipLabel>
    <relationshipName>Detalles_caso</relationshipName>
    <type>Lookup</type>
</CustomField>