force-app/main/default/objects/Detalle_caso__c/fields/Cabeza_retiro__c.field-meta.xml
<CustomField>
    <fullName>Cabeza_retiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cabeza de retiro</label>
    <type>Checkbox</type>
</CustomField>