force-app/main/default/objects/Detalle_caso__c/fields/Cambio_moneda__c.field-meta.xml
<CustomField>
    <fullName>Cambio_moneda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio_moneda</label>
    <type>Checkbox</type>
</CustomField>