force-app/main/default/objects/Detalle_caso__c/fields/Canal_aporte_actual__c.field-meta.xml
<CustomField>
    <fullName>Canal_aporte_actual__c</fullName>
    <formula>Text(Cuenta__r.Forma_Aportacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de aporte actual</label>
    <type>Text</type>
</CustomField>