force-app/main/default/objects/Detalle_caso__c/fields/Cargar_cargos_Empleados__c.field-meta.xml
<CustomField>
    <fullName>Cargar_cargos_Empleados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargar cargos Empleados</label>
    <type>Checkbox</type>
</CustomField>