force-app/main/default/objects/Detalle_caso__c/fields/Cargo_Empleado_Paga_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Empleado_Paga_Empresa__c</fullName>
    <label>Cargo Empleado Paga Empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>