force-app/main/default/objects/Detalle_caso__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Cuentas_caso</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>