force-app/main/default/objects/Detalle_caso__c/fields/Cliente_quiere_capital_semilla__c.field-meta.xml
<CustomField>
    <fullName>Cliente_quiere_capital_semilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente quiere capital semilla</label>
    <type>Checkbox</type>
</CustomField>