force-app/main/default/objects/Detalle_caso__c/fields/Cliente_sigue_Laborando__c.field-meta.xml
<CustomField>
    <fullName>Cliente_sigue_Laborando__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente sigue Laborando</label>
    <type>Checkbox</type>
</CustomField>