force-app/main/default/objects/Detalle_caso__c/fields/Cobrar_comision__c.field-meta.xml
<CustomField>
    <fullName>Cobrar_comision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobrar comision</label>
    <type>Checkbox</type>
</CustomField>