force-app/main/default/objects/Detalle_caso__c/fields/Cobrar_empleado_sigue_laborando__c.field-meta.xml
<CustomField>
    <fullName>Cobrar_empleado_sigue_laborando__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobrar si empleado sigue laborando</label>
    <type>Checkbox</type>
</CustomField>