force-app/main/default/objects/Detalle_caso__c/fields/Cobro_ACH__c.field-meta.xml
<CustomField>
    <fullName>Cobro_ACH__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cobro ACH</label>
    <type>Checkbox</type>
</CustomField>