force-app/main/default/objects/Detalle_caso__c/fields/Cobro_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Cobro_Cheque__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cobro Cheque</label>
    <type>Checkbox</type>
</CustomField>