force-app/main/default/objects/Detalle_caso__c/fields/Cobro_Saldo_Minimo_CRA__c.field-meta.xml
<CustomField>
    <fullName>Cobro_Saldo_Minimo_CRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobro Saldo Minimo CRA</label>
    <type>Checkbox</type>
</CustomField>