force-app/main/default/objects/Detalle_caso__c/fields/Cobro_TSP__c.field-meta.xml
<CustomField>
    <fullName>Cobro_TSP__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cobro TSP</label>
    <type>Checkbox</type>
</CustomField>