force-app/main/default/objects/Detalle_caso__c/fields/Cod_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Cod_Referencia__c</fullName>
    <label>Cod Referencia</label>
    <length>200</length>
    <type>Text</type>
</CustomField>