force-app/main/default/objects/Detalle_caso__c/fields/Comision_por_aporte__c.field-meta.xml
<CustomField>
    <fullName>Comision_por_aporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comisión por aporte</label>
    <type>Checkbox</type>
</CustomField>