force-app/main/default/objects/Detalle_caso__c/fields/Comision_Retiro_Anticipado__c.field-meta.xml
<CustomField>
    <fullName>Comision_Retiro_Anticipado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comisión por Retiro Anticipado</label>
    <type>Checkbox</type>
</CustomField>