force-app/main/default/objects/Detalle_caso__c/fields/Comision_retiro_anticipado_empresa__c.field-meta.xml
<CustomField>
    <fullName>Comision_retiro_anticipado_empresa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comisión por retiro anticipado</label>
    <type>Checkbox</type>
</CustomField>