force-app/main/default/objects/Detalle_caso__c/fields/Correo_cliente__c.field-meta.xml
<CustomField>
    <fullName>Correo_cliente__c</fullName>
    <label>Correo del cliente</label>
    <type>Email</type>
</CustomField>