force-app/main/default/objects/Detalle_caso__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Cuentas__c</referenceTo>
    <relationshipName>Cuentas_caso</relationshipName>
    <type>Lookup</type>
</CustomField>