force-app/main/default/objects/Detalle_caso__c/fields/Cuenta_Colectiva_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Colectiva_Anterior__c</fullName>
    <label>Cuenta Colectiva Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>