force-app/main/default/objects/Detalle_caso__c/fields/Cuenta_destino__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_destino__c</fullName>
    <label>Cuenta destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200005556658</fullName>
                <default>true</default>
                <label>Lempiras 2000-0555-6658</label>
            </value>
            <value>
                <fullName>200002019538</fullName>
                <label>Dólares 2000-0201-9538</label>
            </value>
            <value>
                <fullName>200002019441</fullName>
                <label>Mixto 2000-0201-9441</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>