force-app/main/default/objects/Detalle_caso__c/fields/DAU_Borrar_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>DAU_Borrar_Cuotas__c</fullName>
    <label>Borrar Cuotas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>No borrar cuotas</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Borrar cuotas excepto saldo 18</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Borrar cuotas incluyendo saldo 18</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>