force-app/main/default/objects/Detalle_caso__c/fields/DAU_Tarjeta_Habiente__c.field-meta.xml
<CustomField>
    <fullName>DAU_Tarjeta_Habiente__c</fullName>
    <label>Nombre Tarjeta Habiente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>