force-app/main/default/objects/Detalle_caso__c/fields/DAU_Tipo_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>DAU_Tipo_Tarjeta__c</fullName>
    <label>Tipo de Tarjeta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>