force-app/main/default/objects/Detalle_caso__c/fields/Detalle_Cuenta_colectiva__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Cuenta_colectiva__c</fullName>
    <label>Detalle Cuenta colectiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>