force-app/main/default/objects/Detalle_caso__c/fields/Detalle_subproducto__c.field-meta.xml
<CustomField>
    <fullName>Detalle_subproducto__c</fullName>
    <label>Detalle subproducto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>