force-app/main/default/objects/Detalle_caso__c/fields/Dia_aporte__c.field-meta.xml
<CustomField>
    <fullName>Dia_aporte__c</fullName>
    <formula>DAY(Nueva_fecha_aporte__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día de aporte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>