force-app/main/default/objects/Detalle_caso__c/fields/Diferencia_monto_aumentado__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_monto_aumentado__c</fullName>
    <formula>Nuevo_monto_aporte__c -  Cuenta__r.Monto_aporte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia monto aumentado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>