force-app/main/default/objects/Detalle_caso__c/fields/Error_retiros__c.field-meta.xml
<CustomField>
    <fullName>Error_retiros__c</fullName>
    <formula>IF(Cabeza_retiro__c, Text(Saldo_retirar__c) + &quot;W&quot;, Text(Saldo_retirar__c) + &quot;R&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Error retiros</label>
    <type>Text</type>
</CustomField>