force-app/main/default/objects/Detalle_caso__c/fields/Es_Primer_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>Es_Primer_Prestamo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Primer Prestamo</label>
    <type>Checkbox</type>
</CustomField>