force-app/main/default/objects/Detalle_caso__c/fields/Exoneracion_3ra_Edad__c.field-meta.xml
<CustomField>
    <fullName>Exoneracion_3ra_Edad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exoneración 3ra Edad</label>
    <type>Checkbox</type>
</CustomField>