force-app/main/default/objects/Detalle_caso__c/fields/Exonerado__c.field-meta.xml
<CustomField>
    <fullName>Exonerado__c</fullName>
    <label>Exonerado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>