force-app/main/default/objects/Detalle_caso__c/fields/Fecha_aporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_aporte__c</fullName>
    <label>Fecha de aporte</label>
    <type>Date</type>
</CustomField>