force-app/main/default/objects/Detalle_caso__c/fields/Fecha_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Deposito__c</fullName>
    <label>Fecha de Deposito</label>
    <type>Date</type>
</CustomField>