force-app/main/default/objects/Detalle_caso__c/fields/Fecha_Despido_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Despido_Empresa__c</fullName>
    <label>Fecha de Despido Empresa</label>
    <type>Date</type>
</CustomField>