force-app/main/default/objects/Detalle_caso__c/fields/Fecha_hasta_Reversar__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hasta_Reversar__c</fullName>
    <label>Fecha hasta Reversar</label>
    <type>Date</type>
</CustomField>