force-app/main/default/objects/Detalle_caso__c/fields/Fecha_Ingreso_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso_Empresa__c</fullName>
    <label>Fecha de Ingreso Empresa</label>
    <type>Date</type>
</CustomField>