force-app/main/default/objects/Detalle_caso__c/fields/Fecha_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_nacimiento__c</fullName>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>