force-app/main/default/objects/Detalle_caso__c/fields/Forma_parentesco__c.field-meta.xml
<CustomField>
    <fullName>Forma_parentesco__c</fullName>
    <label>Forma de parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consanguinidad</fullName>
            </value>
            <value>
                <fullName>Afinidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>