force-app/main/default/objects/Detalle_caso__c/fields/Forma_Retiro__c.field-meta.xml
<CustomField>
    <fullName>Forma_Retiro__c</fullName>
    <label>Forma de Retiro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CK</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>AH</fullName>
                <label>Credito a Cuenta Ficohsa</label>
            </value>
            <value>
                <fullName>ACH</fullName>
                <label>Transferencia ACH</label>
            </value>
            <value>
                <fullName>EF</fullName>
                <label>Efectivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>