force-app/main/default/objects/Detalle_caso__c/fields/FPC_Monto_Retenido_Individual__c.field-meta.xml
<CustomField>
    <fullName>FPC_Monto_Retenido_Individual__c</fullName>
    <description>Monto Retenido Individual</description>
    <formula>IF( OR( ISPICKVAL(Tipo_saldo_modificar2__c, &quot;10&quot;), ISPICKVAL(Tipo_saldo_modificar2__c, &quot;11&quot;), ISPICKVAL(Tipo_saldo_modificar2__c, &quot;17&quot;)), (Saldo_total__c -  Monto_bruto_retirar__c), 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monto Retenido Individual</inlineHelpText>
    <label>FPC - Monto Retenido Individual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>