force-app/main/default/objects/Detalle_caso__c/fields/FPC_Monto_Retenido_Jur_dico__c.field-meta.xml
<CustomField>
    <fullName>FPC_Monto_Retenido_Jur_dico__c</fullName>
    <description>Monto Retenido Jurídico</description>
    <formula>IF(OR( ISPICKVAL(Tipo_saldo_modificar2__c, &quot;12&quot;), ISPICKVAL(Tipo_saldo_modificar2__c, &quot;13&quot;)), (Saldo_total__c - Monto_bruto_retirar__c), 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monto Retenido Jurídico</inlineHelpText>
    <label>FPC - Monto Retenido Jurídico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>