force-app/main/default/objects/Detalle_caso__c/fields/FPC_TipoPrestamo__c.field-meta.xml
<CustomField>
    <fullName>FPC_TipoPrestamo__c</fullName>
    <label>Tipo de Préstamo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco</fullName>
            </value>
            <value>
                <fullName>Fideicomiso</fullName>
            </value>
            <value>
                <fullName>Sobregiros</fullName>
            </value>
            <value>
                <fullName>Línea de Crédito</fullName>
            </value>
            <value>
                <fullName>Fianza (Seguros)</fullName>
            </value>
            <value>
                <fullName>Garantía Bancaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>