force-app/main/default/objects/Detalle_caso__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Mensual</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Trimestral</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Semestral</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Anual</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Quincenal</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>Semanal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>