force-app/main/default/objects/Detalle_caso__c/fields/Grado_parentesco__c.field-meta.xml
<CustomField>
    <fullName>Grado_parentesco__c</fullName>
    <label>Grado de parentesco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primero</fullName>
            </value>
            <value>
                <fullName>Segundo</fullName>
            </value>
            <value>
                <fullName>Tercero</fullName>
            </value>
            <value>
                <fullName>Cuarto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>