force-app/main/default/objects/Detalle_caso__c/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <label>Id Externo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>