force-app/main/default/objects/Detalle_caso__c/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <label>Identificación</label>
    <length>25</length>
    <type>Text</type>
</CustomField>