force-app/main/default/objects/Detalle_caso__c/fields/Indice__c.field-meta.xml
<CustomField>
    <fullName>Indice__c</fullName>
    <label>Indice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>