force-app/main/default/objects/Detalle_caso__c/fields/Inicio_Fecha_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Inicio_Fecha_Aporte__c</fullName>
    <label>Inicio Fecha Aporte</label>
    <type>Date</type>
</CustomField>