force-app/main/default/objects/Detalle_caso__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mes</valueSetName>
    </valueSet>
</CustomField>