force-app/main/default/objects/Detalle_caso__c/fields/ModificadoActInfo__c.field-meta.xml
<CustomField>
    <fullName>ModificadoActInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModificadoActInfo</label>
    <type>Checkbox</type>
</CustomField>