force-app/main/default/objects/Detalle_caso__c/fields/Moneda_Cuenta_Destino__c.field-meta.xml
<CustomField>
    <fullName>Moneda_Cuenta_Destino__c</fullName>
    <label>Moneda Cuenta Destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HNL</fullName>
                <label>Lempiras</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <label>Dólares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>