force-app/main/default/objects/Detalle_caso__c/fields/Monto_a_Pignorar__c.field-meta.xml
<CustomField>
    <fullName>Monto_a_Pignorar__c</fullName>
    <label>Monto a Pignorar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>