force-app/main/default/objects/Detalle_caso__c/fields/Monto_ACH__c.field-meta.xml
<CustomField>
    <fullName>Monto_ACH__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto ACH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>