force-app/main/default/objects/Detalle_caso__c/fields/Monto_ACH_Patrono__c.field-meta.xml
<CustomField>
    <fullName>Monto_ACH_Patrono__c</fullName>
    <label>Monto ACH Patrono</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>