force-app/main/default/objects/Detalle_caso__c/fields/Monto_comision_aporte__c.field-meta.xml
<CustomField>
    <fullName>Monto_comision_aporte__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto comisión por aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>