force-app/main/default/objects/Detalle_caso__c/fields/Monto_comision_retiro__c.field-meta.xml
<CustomField>
    <fullName>Monto_comision_retiro__c</fullName>
    <label>Monto comision por retiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>