force-app/main/default/objects/Detalle_caso__c/fields/Monto_exonerado_mes__c.field-meta.xml
<CustomField>
    <fullName>Monto_exonerado_mes__c</fullName>
    <label>Monto exonerado al mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>