force-app/main/default/objects/Detalle_caso__c/fields/Monto_Neto_Retirar_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Monto_Neto_Retirar_Empresa__c</fullName>
    <label>Monto Neto a Retirar Empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>