force-app/main/default/objects/Detalle_caso__c/fields/Monto_Original__c.field-meta.xml
<CustomField>
    <fullName>Monto_Original__c</fullName>
    <label>Monto Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>