force-app/main/default/objects/Detalle_caso__c/fields/Monto_Pignorado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pignorado__c</fullName>
    <label>Monto Pignorado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>