force-app/main/default/objects/Detalle_caso__c/fields/Monto_Pignorar_Refinanciamiento__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pignorar_Refinanciamiento__c</fullName>
    <label>Monto a Pignorar Refinanciamiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>