force-app/main/default/objects/Detalle_caso__c/fields/Monto_Prestamo_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Monto_Prestamo_Anterior__c</fullName>
    <label>Monto Prestamo Anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>