force-app/main/default/objects/Detalle_caso__c/fields/Monto_reversar__c.field-meta.xml
<CustomField>
    <fullName>Monto_reversar__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto a reversar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>