force-app/main/default/objects/Detalle_caso__c/fields/Monto_saldo__c.field-meta.xml
<CustomField>
    <fullName>Monto_saldo__c</fullName>
    <label>Monto del saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>