force-app/main/default/objects/Detalle_caso__c/fields/Monto_Saldo_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Patronal__c</fullName>
    <label>Monto Saldo Patronal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>