force-app/main/default/objects/Detalle_caso__c/fields/Monto_total_comisiones_recargos__c.field-meta.xml
<CustomField>
    <fullName>Monto_total_comisiones_recargos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto total comisiones y recargos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>