force-app/main/default/objects/Detalle_caso__c/fields/Monto_total_retirar__c.field-meta.xml
<CustomField>
    <fullName>Monto_total_retirar__c</fullName>
    <label>Monto total a retirar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>